tests/syntax_error/missing_args_function.jou
def foo:  # Error: expected a '(' to denote the start of arguments, got ':'
    return
